# android-native-bootstrap

./: .gitignore  LICENSE  README.md  SKILL.md
adapters/: GEMINI.md
agents/: openai.yaml
assets/native-android-cmake-template/: settings.gradle.kts
assets/native-android-cmake-template/app/: build.gradle.kts
assets/native-android-cmake-template/app/src/main/: AndroidManifest.xml
assets/native-android-cmake-template/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
assets/native-android-cmake-template/app/src/main/cpp/core/: image_processor.cpp  image_processor.h  native_engine.cpp  native_engine.h
assets/native-android-cmake-template/app/src/main/java/com/example/nativeengine/: NativeEngine.kt
assets/native-android-cmake-template/app/src/main/java/com/example/nativeimage/: NativeImageProcessor.kt
assets/native-android-cmake-template/app/src/main/res/values/: strings.xml
assets/native-android-cmake-template/gradle/: libs.versions.toml
references/: agent-adapters.md  android-cli-notes.md  cutting-edge-android.md
scripts/: check-android-cli.ps1  check-antigravity-install.ps1  install-antigravity.ps1
